--- a/assets/style.css
+++ b/assets/style.css
@@ -3,26 +3,10 @@
     background-color:rgb(21, 78, 134);
 }
 
-/* header, h1, nav, nav ul, and nav li are all styling the header */
 header {
     display: flex;
-    justify-content: space-between;
-    background-color:palegreen;
-    border-top: solid black 3px;
-    border-left: solid black 3px;
-    border-right: solid black 3px;
+    justify-content: flex-end;
     width: 100%;
-}
-
-h1 {
-    margin-left: 20px;
-    padding: 10px;
-    background-color: lightblue;
-    border-radius:20px;
-}
-
-nav {
-    background-color:palegreen;
 }
 
 nav ul {
@@ -30,7 +14,6 @@ nav ul {
     justify-content: space-between;
     min-width: 250px;
     font-size: 15px;
-    background-color:palegreen;
 
 }
 
@@ -44,7 +27,10 @@ nav li {
     position: relative;
 }
 
-/*section, and section h2 are all styling the Projects section */
+h1 {
+    font-size: 30px;
+}
+
 section {
     margin-bottom: 100px;
 }
@@ -54,7 +40,6 @@ section h2 {
     width: 150px;
 }
 
-/* h3 and footer style the bottom footer section */
 h3 {
     border: black solid 1px;
     max-width: 150px;
@@ -69,16 +54,24 @@ footer {
     padding-bottom: 30px;
 }
 
+#bannerbox {
+    position:relative;
+}
+
 /* page-links and banner style the header */
 .page-links {
     background-color: lightblue;
 }
 
 .banner {
-    border-right: black solid 3px;
-    border-left: solid black 3px;
-    border-bottom: solid black 3px;
-    width: 100%;
+    border: black solid 3px;
+}
+
+.meIntro {
+    position: absolute;
+    top: 100px;
+    left: 20px;
+    background-color: transparent;
 }
 
 /* words, about-and-pic, and krystyn all style the about me area */
